Continuing PyCitySchools Challenge

--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "9          84  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
        "[39170 rows x 7 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
        "4        84.0          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,19 +619,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Step 3. Calculate the passing percentages with the new total student count.\n",
-    "passing_math_percentage = passing_math_count / new_student_count\n",
+    "passing_math_percentage = passing_math_count / new_student_count * 100\n",
     "\n",
-    "passing_reading_percentage = passing_reading_count / new_student_count\n"
+    "passing_reading_percentage = passing_reading_count / new_student_count * 100\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,12 +644,12 @@
     "\n",
     "\n",
     "# Step 4.Calculate the overall passing percentage with new total student count.\n",
-    "overall_passing_percentage = overall_passing_math_reading_count / new_student_count\n"
+    "overall_passing_percentage = overall_passing_math_reading_count / new_student_count * 100\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -691,9 +691,9 @@
        "      <td>$24,649,428.00</td>\n",
        "      <td>78.9</td>\n",
        "      <td>81.9</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>0.6</td>\n",
+       "      <td>74.8</td>\n",
+       "      <td>85.7</td>\n",
+       "      <td>64.9</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -704,10 +704,10 @@
        "0             15         39,170  $24,649,428.00               78.9   \n",
        "\n",
        "  Average Reading Score % Passing Math % Passing Reading % Overall Passing  \n",
-       "0                  81.9            0.7               0.9               0.6  "
+       "0                  81.9           74.8              85.7              64.9  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1115,11 +1115,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 5.  Get the number of 10th-12th graders from Thomas High School (THS).\n"
+    "# Step 5.  Get the number of 10th-12th graders from Thomas High School (THS).\n",
+    "#student_data_df.loc[(student_data_df.grade == \"9th\") & (student_data_df.school_name == \"Thomas High School\")]\n",
+    "ths_10_to_12_count = school_data_complete_df.loc[(((school_data_complete_df.grade == \"10th\") | (school_data_complete_df.grade == \"11th\") | (school_data_complete_df.grade == \"12th\")) & (school_data_complete_df.school_name == \"Thomas High School\"))].count()[\"Student ID\"]\n"
    ]
   },
   {
