Updating Readme.MD for Challenge

--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -414,10 +414,7 @@
    ],
    "source": [
     "#  Step 4. Check the student data for NaN's. \n",
-    "\n",
-    "#student_data_df.loc[(student_data_df.grade == \"9th\") & (student_data_df.school_name == \"Thomas High School\")]\n",
-    "#student_data_df.loc[(student_data_df.school_name == \"Thomas High School\")]\n",
-    "student_data_df"
+    "student_data_df\n"
    ]
   },
   {
@@ -649,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -691,9 +688,9 @@
        "      <td>$24,649,428.00</td>\n",
        "      <td>78.9</td>\n",
        "      <td>81.9</td>\n",
-       "      <td>74.8</td>\n",
-       "      <td>85.7</td>\n",
-       "      <td>64.9</td>\n",
+       "      <td>74.8%</td>\n",
+       "      <td>85.7%</td>\n",
+       "      <td>64.9%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -704,10 +701,10 @@
        "0             15         39,170  $24,649,428.00               78.9   \n",
        "\n",
        "  Average Reading Score % Passing Math % Passing Reading % Overall Passing  \n",
-       "0                  81.9           74.8              85.7              64.9  "
+       "0                  81.9          74.8%             85.7%             64.9%  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,9 +730,9 @@
     "# Format the columns.\n",
     "district_summary_df[\"Average Math Score\"] = district_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
     "district_summary_df[\"Average Reading Score\"] = district_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
-    "district_summary_df[\"% Passing Math\"] = district_summary_df[\"% Passing Math\"].map(\"{:.1f}\".format)\n",
-    "district_summary_df[\"% Passing Reading\"] = district_summary_df[\"% Passing Reading\"].map(\"{:.1f}\".format)\n",
-    "district_summary_df[\"% Overall Passing\"] = district_summary_df[\"% Overall Passing\"].map(\"{:.1f}\".format)\n",
+    "district_summary_df[\"% Passing Math\"] = district_summary_df[\"% Passing Math\"].map(\"{:.1f}%\".format)\n",
+    "district_summary_df[\"% Passing Reading\"] = district_summary_df[\"% Passing Reading\"].map(\"{:.1f}%\".format)\n",
+    "district_summary_df[\"% Overall Passing\"] = district_summary_df[\"% Overall Passing\"].map(\"{:.1f}%\".format)\n",
     "\n",
     "# Display the data frame\n",
     "district_summary_df"
