--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -4166,7 +4166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -4296,7 +4296,7 @@
        "Griffin High School           97.138965          90.599455  "
       ]
      },
-     "execution_count": 99,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4319,7 +4319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -4361,11 +4361,11 @@
        "      <td>4976</td>\n",
        "      <td>$3,124,928.00</td>\n",
        "      <td>$628.00</td>\n",
-       "      <td>77.048432</td>\n",
-       "      <td>81.033963</td>\n",
-       "      <td>66.680064</td>\n",
-       "      <td>81.933280</td>\n",
-       "      <td>54.642283</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>67%</td>\n",
+       "      <td>82%</td>\n",
+       "      <td>55%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Cabrera High School</th>\n",
@@ -4373,11 +4373,11 @@
        "      <td>1858</td>\n",
        "      <td>$1,081,356.00</td>\n",
        "      <td>$582.00</td>\n",
-       "      <td>83.061895</td>\n",
-       "      <td>83.975780</td>\n",
-       "      <td>94.133477</td>\n",
-       "      <td>97.039828</td>\n",
-       "      <td>91.334769</td>\n",
+       "      <td>83.1</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>94%</td>\n",
+       "      <td>97%</td>\n",
+       "      <td>91%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Figueroa High School</th>\n",
@@ -4385,11 +4385,11 @@
        "      <td>2949</td>\n",
        "      <td>$1,884,411.00</td>\n",
        "      <td>$639.00</td>\n",
-       "      <td>76.711767</td>\n",
-       "      <td>81.158020</td>\n",
-       "      <td>65.988471</td>\n",
-       "      <td>80.739234</td>\n",
-       "      <td>53.204476</td>\n",
+       "      <td>76.7</td>\n",
+       "      <td>81.2</td>\n",
+       "      <td>66%</td>\n",
+       "      <td>81%</td>\n",
+       "      <td>53%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Ford High School</th>\n",
@@ -4397,11 +4397,11 @@
        "      <td>2739</td>\n",
        "      <td>$1,763,916.00</td>\n",
        "      <td>$644.00</td>\n",
-       "      <td>77.102592</td>\n",
-       "      <td>80.746258</td>\n",
-       "      <td>68.309602</td>\n",
-       "      <td>79.299014</td>\n",
-       "      <td>54.289887</td>\n",
+       "      <td>77.1</td>\n",
+       "      <td>80.7</td>\n",
+       "      <td>68%</td>\n",
+       "      <td>79%</td>\n",
+       "      <td>54%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Griffin High School</th>\n",
@@ -4409,11 +4409,11 @@
        "      <td>1468</td>\n",
        "      <td>$917,500.00</td>\n",
        "      <td>$625.00</td>\n",
-       "      <td>83.351499</td>\n",
-       "      <td>83.816757</td>\n",
-       "      <td>93.392371</td>\n",
-       "      <td>97.138965</td>\n",
-       "      <td>90.599455</td>\n",
+       "      <td>83.4</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>93%</td>\n",
+       "      <td>97%</td>\n",
+       "      <td>91%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Hernandez High School</th>\n",
@@ -4421,11 +4421,11 @@
        "      <td>4635</td>\n",
        "      <td>$3,022,020.00</td>\n",
        "      <td>$652.00</td>\n",
-       "      <td>77.289752</td>\n",
-       "      <td>80.934412</td>\n",
-       "      <td>66.752967</td>\n",
-       "      <td>80.862999</td>\n",
-       "      <td>53.527508</td>\n",
+       "      <td>77.3</td>\n",
+       "      <td>80.9</td>\n",
+       "      <td>67%</td>\n",
+       "      <td>81%</td>\n",
+       "      <td>54%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Holden High School</th>\n",
@@ -4433,11 +4433,11 @@
        "      <td>427</td>\n",
        "      <td>$248,087.00</td>\n",
        "      <td>$581.00</td>\n",
-       "      <td>83.803279</td>\n",
-       "      <td>83.814988</td>\n",
-       "      <td>92.505855</td>\n",
-       "      <td>96.252927</td>\n",
-       "      <td>89.227166</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>93%</td>\n",
+       "      <td>96%</td>\n",
+       "      <td>89%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Huang High School</th>\n",
@@ -4445,11 +4445,11 @@
        "      <td>2917</td>\n",
        "      <td>$1,910,635.00</td>\n",
        "      <td>$655.00</td>\n",
-       "      <td>76.629414</td>\n",
-       "      <td>81.182722</td>\n",
-       "      <td>65.683922</td>\n",
-       "      <td>81.316421</td>\n",
-       "      <td>53.513884</td>\n",
+       "      <td>76.6</td>\n",
+       "      <td>81.2</td>\n",
+       "      <td>66%</td>\n",
+       "      <td>81%</td>\n",
+       "      <td>54%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Johnson High School</th>\n",
@@ -4457,11 +4457,11 @@
        "      <td>4761</td>\n",
        "      <td>$3,094,650.00</td>\n",
        "      <td>$650.00</td>\n",
-       "      <td>77.072464</td>\n",
-       "      <td>80.966394</td>\n",
-       "      <td>66.057551</td>\n",
-       "      <td>81.222432</td>\n",
-       "      <td>53.539172</td>\n",
+       "      <td>77.1</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>66%</td>\n",
+       "      <td>81%</td>\n",
+       "      <td>54%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Pena High School</th>\n",
@@ -4469,11 +4469,11 @@
        "      <td>962</td>\n",
        "      <td>$585,858.00</td>\n",
        "      <td>$609.00</td>\n",
-       "      <td>83.839917</td>\n",
-       "      <td>84.044699</td>\n",
-       "      <td>94.594595</td>\n",
-       "      <td>95.945946</td>\n",
-       "      <td>90.540541</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>95%</td>\n",
+       "      <td>96%</td>\n",
+       "      <td>91%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Rodriguez High School</th>\n",
@@ -4481,11 +4481,11 @@
        "      <td>3999</td>\n",
        "      <td>$2,547,363.00</td>\n",
        "      <td>$637.00</td>\n",
-       "      <td>76.842711</td>\n",
-       "      <td>80.744686</td>\n",
-       "      <td>66.366592</td>\n",
-       "      <td>80.220055</td>\n",
-       "      <td>52.988247</td>\n",
+       "      <td>76.8</td>\n",
+       "      <td>80.7</td>\n",
+       "      <td>66%</td>\n",
+       "      <td>80%</td>\n",
+       "      <td>53%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Shelton High School</th>\n",
@@ -4493,11 +4493,11 @@
        "      <td>1761</td>\n",
        "      <td>$1,056,600.00</td>\n",
        "      <td>$600.00</td>\n",
-       "      <td>83.359455</td>\n",
-       "      <td>83.725724</td>\n",
-       "      <td>93.867121</td>\n",
-       "      <td>95.854628</td>\n",
-       "      <td>89.892107</td>\n",
+       "      <td>83.4</td>\n",
+       "      <td>83.7</td>\n",
+       "      <td>94%</td>\n",
+       "      <td>96%</td>\n",
+       "      <td>90%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Thomas High School</th>\n",
@@ -4505,11 +4505,11 @@
        "      <td>1635</td>\n",
        "      <td>$1,043,130.00</td>\n",
        "      <td>$638.00</td>\n",
-       "      <td>83.418349</td>\n",
-       "      <td>83.848930</td>\n",
-       "      <td>93.272171</td>\n",
-       "      <td>97.308869</td>\n",
-       "      <td>90.948012</td>\n",
+       "      <td>83.4</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>93%</td>\n",
+       "      <td>97%</td>\n",
+       "      <td>91%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Wilson High School</th>\n",
@@ -4517,11 +4517,11 @@
        "      <td>2283</td>\n",
        "      <td>$1,319,574.00</td>\n",
        "      <td>$578.00</td>\n",
-       "      <td>83.274201</td>\n",
-       "      <td>83.989488</td>\n",
-       "      <td>93.867718</td>\n",
-       "      <td>96.539641</td>\n",
-       "      <td>90.582567</td>\n",
+       "      <td>83.3</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>94%</td>\n",
+       "      <td>97%</td>\n",
+       "      <td>91%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Wright High School</th>\n",
@@ -4529,11 +4529,11 @@
        "      <td>1800</td>\n",
        "      <td>$1,049,400.00</td>\n",
        "      <td>$583.00</td>\n",
-       "      <td>83.682222</td>\n",
-       "      <td>83.955000</td>\n",
-       "      <td>93.333333</td>\n",
-       "      <td>96.611111</td>\n",
-       "      <td>90.333333</td>\n",
+       "      <td>83.7</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>93%</td>\n",
+       "      <td>97%</td>\n",
+       "      <td>90%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -4557,68 +4557,72 @@
        "Wilson High School        Charter            2283       $1,319,574.00   \n",
        "Wright High School        Charter            1800       $1,049,400.00   \n",
        "\n",
-       "                      Per Student Budget  Average Math Score  \\\n",
-       "Bailey High School               $628.00           77.048432   \n",
-       "Cabrera High School              $582.00           83.061895   \n",
-       "Figueroa High School             $639.00           76.711767   \n",
-       "Ford High School                 $644.00           77.102592   \n",
-       "Griffin High School              $625.00           83.351499   \n",
-       "Hernandez High School            $652.00           77.289752   \n",
-       "Holden High School               $581.00           83.803279   \n",
-       "Huang High School                $655.00           76.629414   \n",
-       "Johnson High School              $650.00           77.072464   \n",
-       "Pena High School                 $609.00           83.839917   \n",
-       "Rodriguez High School            $637.00           76.842711   \n",
-       "Shelton High School              $600.00           83.359455   \n",
-       "Thomas High School               $638.00           83.418349   \n",
-       "Wilson High School               $578.00           83.274201   \n",
-       "Wright High School               $583.00           83.682222   \n",
+       "                      Per Student Budget Average Math Score  \\\n",
+       "Bailey High School               $628.00               77.0   \n",
+       "Cabrera High School              $582.00               83.1   \n",
+       "Figueroa High School             $639.00               76.7   \n",
+       "Ford High School                 $644.00               77.1   \n",
+       "Griffin High School              $625.00               83.4   \n",
+       "Hernandez High School            $652.00               77.3   \n",
+       "Holden High School               $581.00               83.8   \n",
+       "Huang High School                $655.00               76.6   \n",
+       "Johnson High School              $650.00               77.1   \n",
+       "Pena High School                 $609.00               83.8   \n",
+       "Rodriguez High School            $637.00               76.8   \n",
+       "Shelton High School              $600.00               83.4   \n",
+       "Thomas High School               $638.00               83.4   \n",
+       "Wilson High School               $578.00               83.3   \n",
+       "Wright High School               $583.00               83.7   \n",
        "\n",
-       "                       Average Reading Score  % Passing Math  \\\n",
-       "Bailey High School                 81.033963       66.680064   \n",
-       "Cabrera High School                83.975780       94.133477   \n",
-       "Figueroa High School               81.158020       65.988471   \n",
-       "Ford High School                   80.746258       68.309602   \n",
-       "Griffin High School                83.816757       93.392371   \n",
-       "Hernandez High School              80.934412       66.752967   \n",
-       "Holden High School                 83.814988       92.505855   \n",
-       "Huang High School                  81.182722       65.683922   \n",
-       "Johnson High School                80.966394       66.057551   \n",
-       "Pena High School                   84.044699       94.594595   \n",
-       "Rodriguez High School              80.744686       66.366592   \n",
-       "Shelton High School                83.725724       93.867121   \n",
-       "Thomas High School                 83.848930       93.272171   \n",
-       "Wilson High School                 83.989488       93.867718   \n",
-       "Wright High School                 83.955000       93.333333   \n",
+       "                      Average Reading Score % Passing Math % Passing Reading  \\\n",
+       "Bailey High School                     81.0            67%               82%   \n",
+       "Cabrera High School                    84.0            94%               97%   \n",
+       "Figueroa High School                   81.2            66%               81%   \n",
+       "Ford High School                       80.7            68%               79%   \n",
+       "Griffin High School                    83.8            93%               97%   \n",
+       "Hernandez High School                  80.9            67%               81%   \n",
+       "Holden High School                     83.8            93%               96%   \n",
+       "Huang High School                      81.2            66%               81%   \n",
+       "Johnson High School                    81.0            66%               81%   \n",
+       "Pena High School                       84.0            95%               96%   \n",
+       "Rodriguez High School                  80.7            66%               80%   \n",
+       "Shelton High School                    83.7            94%               96%   \n",
+       "Thomas High School                     83.8            93%               97%   \n",
+       "Wilson High School                     84.0            94%               97%   \n",
+       "Wright High School                     84.0            93%               97%   \n",
        "\n",
-       "                       % Passing Reading  % Overall Passing  \n",
-       "Bailey High School             81.933280          54.642283  \n",
-       "Cabrera High School            97.039828          91.334769  \n",
-       "Figueroa High School           80.739234          53.204476  \n",
-       "Ford High School               79.299014          54.289887  \n",
-       "Griffin High School            97.138965          90.599455  \n",
-       "Hernandez High School          80.862999          53.527508  \n",
-       "Holden High School             96.252927          89.227166  \n",
-       "Huang High School              81.316421          53.513884  \n",
-       "Johnson High School            81.222432          53.539172  \n",
-       "Pena High School               95.945946          90.540541  \n",
-       "Rodriguez High School          80.220055          52.988247  \n",
-       "Shelton High School            95.854628          89.892107  \n",
-       "Thomas High School             97.308869          90.948012  \n",
-       "Wilson High School             96.539641          90.582567  \n",
-       "Wright High School             96.611111          90.333333  "
+       "                      % Overall Passing  \n",
+       "Bailey High School                  55%  \n",
+       "Cabrera High School                 91%  \n",
+       "Figueroa High School                53%  \n",
+       "Ford High School                    54%  \n",
+       "Griffin High School                 91%  \n",
+       "Hernandez High School               54%  \n",
+       "Holden High School                  89%  \n",
+       "Huang High School                   54%  \n",
+       "Johnson High School                 54%  \n",
+       "Pena High School                    91%  \n",
+       "Rodriguez High School               53%  \n",
+       "Shelton High School                 90%  \n",
+       "Thomas High School                  91%  \n",
+       "Wilson High School                  91%  \n",
+       "Wright High School                  90%  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# # Format the Total School Budget and the Per Student Budget columns.\n",
+    "# # Format the columns.\n",
     "per_school_summary_df[\"Total School Budget\"] = per_school_summary_df[\"Total School Budget\"].map(\"${:,.2f}\".format)\n",
-    "\n",
     "per_school_summary_df[\"Per Student Budget\"] = per_school_summary_df[\"Per Student Budget\"].map(\"${:,.2f}\".format)\n",
+    "per_school_summary_df[\"Average Math Score\"] = per_school_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "per_school_summary_df[\"Average Reading Score\"] = per_school_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "per_school_summary_df[\"% Passing Math\"] = per_school_summary_df[\"% Passing Math\"].map(\"{:.0f}%\".format)\n",
+    "per_school_summary_df[\"% Passing Reading\"] = per_school_summary_df[\"% Passing Reading\"].map(\"{:.0f}%\".format)\n",
+    "per_school_summary_df[\"% Overall Passing\"] = per_school_summary_df[\"% Overall Passing\"].map(\"{:.0f}%\".format)\n",
     "\n",
     "per_school_summary_df"
    ]
