Updating Resources for Readme.MD

--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -7257,7 +7257,7 @@
     "type_summary_df[\"% Passing Reading\"] = type_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
     "type_summary_df[\"% Overall Passing\"] = type_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
     "\n",
-    "type_summary_df\n"
+    "type_summary_df"
    ]
   },
   {
