--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -175,7 +175,7 @@
     "# Dependencies and Setup\n",
     "import pandas as pd\n",
     "\n",
-    "# File to Load (Remember to change the path if needed.)\n",
+    "# File to Load\n",
     "school_data_to_load = \"Resources/schools_complete.csv\"\n",
     "student_data_to_load = \"Resources/students_complete.csv\"\n",
     "\n",
